--- a/Simples/ConsoleSimple.Package/ConsoleSimple.Package.csproj
+++ b/Simples/ConsoleSimple.Package/ConsoleSimple.Package.csproj
@@ -7,13 +7,13 @@
 
   <ItemGroup>
     <PackageReference Include="View.Drawing.Extensions" Version="0.2.0" />
-    <PackageReference Include="ViewFaceCore" Version="0.3.5-alpha6" />
-    <PackageReference Include="ViewFaceCore.all_models" Version="6.0.1" />
-    <PackageReference Include="ViewFaceCore.runtime.linux.arm" Version="6.0.1" />
-    <PackageReference Include="ViewFaceCore.runtime.linux.arm64" Version="6.0.1" />
-    <PackageReference Include="ViewFaceCore.runtime.ubuntu.20.04.x64" Version="6.0.1" />
-    <PackageReference Include="ViewFaceCore.runtime.win.x64" Version="6.0.1" />
-    <PackageReference Include="ViewFaceCore.runtime.win.x86" Version="6.0.1" />
+    <PackageReference Include="ViewFaceCore" Version="0.3.5" />
+    <PackageReference Include="ViewFaceCore.all_models" Version="6.0.2" />
+    <PackageReference Include="ViewFaceCore.runtime.linux.arm" Version="6.0.2" />
+    <PackageReference Include="ViewFaceCore.runtime.linux.arm64" Version="6.0.2" />
+    <PackageReference Include="ViewFaceCore.runtime.ubuntu.20.04.x64" Version="6.0.2" />
+    <PackageReference Include="ViewFaceCore.runtime.win.x64" Version="6.0.2" />
+    <PackageReference Include="ViewFaceCore.runtime.win.x86" Version="6.0.2" />
   </ItemGroup>
 
   <ItemGroup>
