--- a/Libraries/ViewFaceCore.runtime.win.x86/ViewFaceCore.runtime.win.x86.csproj
+++ b/Libraries/ViewFaceCore.runtime.win.x86/ViewFaceCore.runtime.win.x86.csproj
@@ -7,4 +7,38 @@
 		<Authors>View</Authors>
 	</PropertyGroup>
 
+	<!--项目引用方式-->
+	<ItemGroup>
+		<None Include="..\..\Bridges\Windows\ViewFaceBridge\bin\Release\x86\ViewFaceBridge.dll" Link="viewfacecore\win\x86\ViewFaceBridge.dll" CopyToOutputDirectory="PreserveNewest" />
+
+		<None Include="..\..\SeetaFace\index\build\bin\x86\tennis.dll" Link="viewfacecore\win\x86\tennis.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\tennis_haswell.dll" Link="viewfacecore\win\x86\tennis_haswell.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\tennis_pentium.dll" Link="viewfacecore\win\x86\tennis_pentium.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\tennis_sandy_bridge.dll" Link="viewfacecore\win\x86\tennis_sandy_bridge.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaAgePredictor600.dll" Link="viewfacecore\win\x86\SeetaAgePredictor600.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaAgePredictor600d.dll" Link="viewfacecore\win\x86\SeetaAgePredictor600d.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaAuthorize.dll" Link="viewfacecore\win\x86\SeetaAuthorize.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaAuthorized.dll" Link="viewfacecore\win\x86\SeetaAuthorized.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaEyeStateDetector200.dll" Link="viewfacecore\win\x86\SeetaEyeStateDetector200.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaEyeStateDetector200d.dll" Link="viewfacecore\win\x86\SeetaEyeStateDetector200d.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaFaceAntiSpoofingX600.dll" Link="viewfacecore\win\x86\SeetaFaceAntiSpoofingX600.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaFaceAntiSpoofingX600d.dll" Link="viewfacecore\win\x86\SeetaFaceAntiSpoofingX600d.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaFaceDetector600.dll" Link="viewfacecore\win\x86\SeetaFaceDetector600.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaFaceDetector600d.dll" Link="viewfacecore\win\x86\SeetaFaceDetector600d.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaFaceLandmarker600.dll" Link="viewfacecore\win\x86\SeetaFaceLandmarker600.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaFaceLandmarker600d.dll" Link="viewfacecore\win\x86\SeetaFaceLandmarker600d.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaFaceRecognizer610.dll" Link="viewfacecore\win\x86\SeetaFaceRecognizer610.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaFaceRecognizer610d.dll" Link="viewfacecore\win\x86\SeetaFaceRecognizer610d.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaFaceTracking600.dll" Link="viewfacecore\win\x86\SeetaFaceTracking600.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaFaceTracking600d.dll" Link="viewfacecore\win\x86\SeetaFaceTracking600d.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaGenderPredictor600.dll" Link="viewfacecore\win\x86\SeetaGenderPredictor600.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaGenderPredictor600d.dll" Link="viewfacecore\win\x86\SeetaGenderPredictor600d.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaMaskDetector200.dll" Link="viewfacecore\win\x86\SeetaMaskDetector200.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaMaskDetector200d.dll" Link="viewfacecore\win\x86\SeetaMaskDetector200d.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaPoseEstimation600.dll" Link="viewfacecore\win\x86\SeetaPoseEstimation600.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaPoseEstimation600d.dll" Link="viewfacecore\win\x86\SeetaPoseEstimation600d.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaQualityAssessor300.dll" Link="viewfacecore\win\x86\SeetaQualityAssessor300.dll" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="..\..\SeetaFace\index\build\bin\x86\SeetaQualityAssessor300d.dll" Link="viewfacecore\win\x86\SeetaQualityAssessor300d.dll" CopyToOutputDirectory="PreserveNewest" />
+	</ItemGroup>
+
 </Project>
