fix: Models 项目可以直接引用

--- a/Models/ViewFaceCore.model.eye_state/ViewFaceCore.model.eye_state.csproj
+++ b/Models/ViewFaceCore.model.eye_state/ViewFaceCore.model.eye_state.csproj
@@ -7,4 +7,9 @@
 		<Authors>View</Authors>
 	</PropertyGroup>
 
+	<!--项目引用方式-->
+	<ItemGroup>
+		<None Update="eye_state.csta" CopyToOutputDirectory="PreserveNewest" />
+	</ItemGroup>
+
 </Project>
