--- a/Models/ViewFaceCore.model.quality_lbn/ViewFaceCore.model.quality_lbn.csproj
+++ b/Models/ViewFaceCore.model.quality_lbn/ViewFaceCore.model.quality_lbn.csproj
@@ -7,4 +7,9 @@
 		<Authors>View</Authors>
 	</PropertyGroup>
 
+	<!--项目引用方式-->
+	<ItemGroup>
+	  <None Update="quality_lbn.csta" CopyToOutputDirectory="PreserveNewest" />
+	</ItemGroup>
+
 </Project>
