--- a/Models/ViewFaceCore.model.age_predictor/ViewFaceCore.model.age_predictor.csproj
+++ b/Models/ViewFaceCore.model.age_predictor/ViewFaceCore.model.age_predictor.csproj
@@ -7,4 +7,9 @@
 		<Authors>View</Authors>
 	</PropertyGroup>
 
+	<!--项目引用方式-->
+	<ItemGroup>
+	  <None Update="age_predictor.csta" CopyToOutputDirectory="PreserveNewest" />
+	</ItemGroup>
+
 </Project>
