--- a/Models/ViewFaceCore.model.face_landmarker_mask_pts5/ViewFaceCore.model.face_landmarker_mask_pts5.csproj
+++ b/Models/ViewFaceCore.model.face_landmarker_mask_pts5/ViewFaceCore.model.face_landmarker_mask_pts5.csproj
@@ -7,4 +7,9 @@
 		<Authors>View</Authors>
 	</PropertyGroup>
 
+	<!--项目引用方式-->
+	<ItemGroup>
+	  <None Update="face_landmarker_mask_pts5.csta" CopyToOutputDirectory="PreserveNewest" />
+	</ItemGroup>
+
 </Project>
