--- a/Models/ViewFaceCore.model.fas_second/ViewFaceCore.model.fas_second.csproj
+++ b/Models/ViewFaceCore.model.fas_second/ViewFaceCore.model.fas_second.csproj
@@ -7,4 +7,9 @@
 		<Authors>View</Authors>
 	</PropertyGroup>
 
+	<!--项目引用方式-->
+	<ItemGroup>
+	  <None Update="fas_second.csta" CopyToOutputDirectory="PreserveNewest" />
+	</ItemGroup>
+
 </Project>
