--- a/Models/ViewFaceCore.model.mask_detector/ViewFaceCore.model.mask_detector.csproj
+++ b/Models/ViewFaceCore.model.mask_detector/ViewFaceCore.model.mask_detector.csproj
@@ -7,4 +7,9 @@
 		<Authors>View</Authors>
 	</PropertyGroup>
 
+	<!--项目引用方式-->
+	<ItemGroup>
+	  <None Update="mask_detector.csta" CopyToOutputDirectory="PreserveNewest" />
+	</ItemGroup>
+
 </Project>
