--- a/src/Bridges/Windows/ViewFaceBridge/ViewFaceBridge.vcxproj.filters
+++ b/src/Bridges/Windows/ViewFaceBridge/ViewFaceBridge.vcxproj.filters
@@ -6,4 +6,7 @@
   <ItemGroup>
     <ClCompile Include="ViewFaceBridge.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
+  </ItemGroup>
 </Project>
