--- a/src/ViewFaceCore/ViewFaceCore.csproj
+++ b/src/ViewFaceCore/ViewFaceCore.csproj
@@ -57,8 +57,7 @@ Linux-arm64 支持库 : ViewFaceCore.runtime.linux.arm64
 		<PackageReference Include="System.Drawing.Common" Version="5.0.3" />
 	</ItemGroup>
 	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-		<PackageReference Include="System.Drawing.Common" Version="5.0.3" />
-		<!--<PackageReference Include="SixLabors.ImageSharp" Version="1.0.4" />-->
+		<!--<PackageReference Include="System.Drawing.Common" Version="5.0.3" />-->
 	</ItemGroup>
 
 </Project>
