--- a/src/Models/ViewFaceCore.model.face_detector/ViewFaceCore.model.face_detector.nuspec
+++ b/src/Models/ViewFaceCore.model.face_detector/ViewFaceCore.model.face_detector.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata>
 		<id>ViewFaceCore.model.face_detector</id>
-		<version>6.0.0</version>
+		<version>6.0.3</version>
 		<title></title>
 		<authors>View</authors>
 		<owners></owners>
@@ -11,7 +11,7 @@
 		<description>SeetaFace model ‘face_detector’ for ViewFaceCore</description>
 	</metadata>
 	<files>
-		<file src="face_detector.csta" target="build\models\face_detector.csta" />
+		<file src="face_detector.csta" target="build\viewfacecore\models\face_detector.csta" />
 		<file src="ViewFaceCore.model.face_detector.targets" target="build\ViewFaceCore.model.face_detector.targets" />
 		<file src="..\..\Images\View-Logo.png" target="View-Logo.png" />
 	</files>
