--- a/src/Models/ViewFaceCore.model.mask_detector/ViewFaceCore.model.mask_detector.csproj
+++ b/src/Models/ViewFaceCore.model.mask_detector/ViewFaceCore.model.mask_detector.csproj
@@ -2,14 +2,14 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>net40;net45;net461;netstandard2.0;netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
-		<Version>6.0.0</Version>
+		<Version>6.0.3</Version>
 		<PackageVersion>$(Version)</PackageVersion>
 		<Authors>View</Authors>
 	</PropertyGroup>
 
 	<!--项目引用方式-->
 	<ItemGroup>
-	  <None Update="mask_detector.csta" CopyToOutputDirectory="PreserveNewest" />
+	  <None Update="mask_detector.csta" CopyToOutputDirectory="PreserveNewest" Link="viewfacecore/models/mask_detector.csta" />
 	</ItemGroup>
 
 </Project>
