--- a/src/Tests/ViewFaceCoreTest/ViewFaceCoreTest.csproj
+++ b/src/Tests/ViewFaceCoreTest/ViewFaceCoreTest.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
+    <PackageReference Include="ViewFaceCore.all_models" Version="6.0.3" />
   </ItemGroup>
 
   <ItemGroup>
