--- a/src/ViewFaceCore/ViewFaceCore.csproj
+++ b/src/ViewFaceCore/ViewFaceCore.csproj
@@ -7,6 +7,7 @@
 		<Authors>View</Authors>
 		<Version>0.3.5</Version>
 		<OutputType>Library</OutputType>
+		<LangVersion>latest</LangVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)'=='Release'">
