--- a/Libraries/ViewFaceCore.runtime.linux.arm/ViewFaceCore.runtime.linux.arm.nuspec
+++ b/Libraries/ViewFaceCore.runtime.linux.arm/ViewFaceCore.runtime.linux.arm.nuspec
@@ -2,11 +2,12 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata>
 		<id>ViewFaceCore.runtime.linux.arm</id>
-		<version>6.0.2</version>
+		<version>6.0.3</version>
 		<title></title>
-		<authors>WithSalt</authors>
+		<authors>WithSalt,SeetaTech</authors>
 		<owners></owners>
-		<requireLicenseAcceptance>false</requireLicenseAcceptance>
+		<requireLicenseAcceptance>true</requireLicenseAcceptance>
+		<license type="file">SeetaFace_LICENSE</license>
 		<icon>WithSalt-Logo.png</icon>
 		<description>ViewFaceCore Native libraries for Linux-arm</description>
 	</metadata>
@@ -29,5 +30,6 @@
 
 		<file src="ViewFaceCore.runtime.linux.arm.targets" target="build\ViewFaceCore.runtime.linux.arm.targets" />
 		<file src="..\..\Images\WithSalt-Logo.png" target="WithSalt-Logo.png" />
+		<file src="..\..\SeetaFace_LICENSE" target="SeetaFace_LICENSE" />
 	</files>
 </package>
