--- a/Libraries/ViewFaceCore.runtime.win.x64/ViewFaceCore.runtime.win.x64.nuspec
+++ b/Libraries/ViewFaceCore.runtime.win.x64/ViewFaceCore.runtime.win.x64.nuspec
@@ -2,11 +2,12 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata>
 		<id>ViewFaceCore.runtime.win.x64</id>
-		<version>6.0.2</version>
+		<version>6.0.3</version>
 		<title></title>
-		<authors>View</authors>
+		<authors>View,SeetaTech</authors>
 		<owners></owners>
-		<requireLicenseAcceptance>false</requireLicenseAcceptance>
+		<requireLicenseAcceptance>true</requireLicenseAcceptance>
+		<license type="file">SeetaFace_LICENSE</license>
 		<icon>View-Logo.png</icon>
 		<description>ViewFaceCore Native libraries for Windows-x64</description>
 	</metadata>
@@ -44,5 +45,6 @@
 
 		<file src="ViewFaceCore.runtime.win.x64.targets" target="build\ViewFaceCore.runtime.win.x64.targets" />
 		<file src="..\..\Images\View-Logo.png" target="View-Logo.png" />
+		<file src="..\..\SeetaFace_LICENSE" target="SeetaFace_LICENSE" />
 	</files>
 </package>
