--- a/src/Models/ViewFaceCore.all_models/ViewFaceCore.all_models.nuspec
+++ b/src/Models/ViewFaceCore.all_models/ViewFaceCore.all_models.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata>
 		<id>ViewFaceCore.all_models</id>
-		<version>6.0.5</version>
+		<version>0.0.0</version>
 		<authors>View, SeetaTech</authors>
 		<owners>ViewFaceCore</owners>
 		<requireLicenseAcceptance>true</requireLicenseAcceptance>
@@ -10,25 +10,25 @@
 		<icon>View-Logo.png</icon>
 		<description>SeetaFace all model for ViewFaceCore</description>
 		<dependencies>
-			<dependency id="ViewFaceCore.model.age_predictor" version="6.0.4" exclude="Analyzers" />
-			<dependency id="ViewFaceCore.model.eye_state" version="6.0.4" exclude="Analyzers" />
-			<dependency id="ViewFaceCore.model.face_detector" version="6.0.4" exclude="Analyzers" />
-			<dependency id="ViewFaceCore.model.face_landmarker_mask_pts5" version="6.0.4" exclude="Analyzers" />
-			<dependency id="ViewFaceCore.model.face_landmarker_pts5" version="6.0.4" exclude="Analyzers" />
-			<dependency id="ViewFaceCore.model.face_landmarker_pts68" version="6.0.4" exclude="Analyzers" />
-			<dependency id="ViewFaceCore.model.face_recognizer" version="6.0.4" exclude="Analyzers" />
-			<dependency id="ViewFaceCore.model.face_recognizer_light" version="6.0.4" exclude="Analyzers" />
-			<dependency id="ViewFaceCore.model.face_recognizer_mask" version="6.0.4" exclude="Analyzers" />
-			<dependency id="ViewFaceCore.model.fas_first" version="6.0.4" exclude="Analyzers" />
-			<dependency id="ViewFaceCore.model.fas_second" version="6.0.4" exclude="Analyzers" />
-			<dependency id="ViewFaceCore.model.gender_predictor" version="6.0.4" exclude="Analyzers" />
-			<dependency id="ViewFaceCore.model.mask_detector" version="6.0.4" exclude="Analyzers" />
-			<dependency id="ViewFaceCore.model.pose_estimation" version="6.0.4" exclude="Analyzers" />
-			<dependency id="ViewFaceCore.model.quality_lbn" version="6.0.4" exclude="Analyzers" />
+			<dependency id="ViewFaceCore.model.age_predictor" version="$version$" exclude="Analyzers" />
+			<dependency id="ViewFaceCore.model.eye_state" version="$version$" exclude="Analyzers" />
+			<dependency id="ViewFaceCore.model.face_detector" version="$version$" exclude="Analyzers" />
+			<dependency id="ViewFaceCore.model.face_landmarker_mask_pts5" version="$version$" exclude="Analyzers" />
+			<dependency id="ViewFaceCore.model.face_landmarker_pts5" version="$version$" exclude="Analyzers" />
+			<dependency id="ViewFaceCore.model.face_landmarker_pts68" version="$version$" exclude="Analyzers" />
+			<dependency id="ViewFaceCore.model.face_recognizer" version="$version$" exclude="Analyzers" />
+			<dependency id="ViewFaceCore.model.face_recognizer_light" version="$version$" exclude="Analyzers" />
+			<dependency id="ViewFaceCore.model.face_recognizer_mask" version="$version$" exclude="Analyzers" />
+			<dependency id="ViewFaceCore.model.fas_first" version="$version$" exclude="Analyzers" />
+			<dependency id="ViewFaceCore.model.fas_second" version="$version$" exclude="Analyzers" />
+			<dependency id="ViewFaceCore.model.gender_predictor" version="$version$" exclude="Analyzers" />
+			<dependency id="ViewFaceCore.model.mask_detector" version="$version$" exclude="Analyzers" />
+			<dependency id="ViewFaceCore.model.pose_estimation" version="$version$" exclude="Analyzers" />
+			<dependency id="ViewFaceCore.model.quality_lbn" version="$version$" exclude="Analyzers" />
 		</dependencies>
 	</metadata>
 	<files>
-		<file src="..\..\logos\View-Logo.png" target="View-Logo.png" />
-		<file src="..\..\SeetaFace_LICENSE" target="SeetaFace_LICENSE" />
+		<file src="..\..\..\assets\logos\View-Logo.png" target="View-Logo.png" />
+		<file src="..\..\..\SeetaFace_LICENSE" target="SeetaFace_LICENSE" />
 	</files>
 </package>
