--- a/src/Models/ViewFaceCore.model.fas_second/ViewFaceCore.model.fas_second.nuspec
+++ b/src/Models/ViewFaceCore.model.fas_second/ViewFaceCore.model.fas_second.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata>
 		<id>ViewFaceCore.model.fas_second</id>
-		<version>6.0.5</version>
+		<version>0.0.0</version>
 		<authors>View, SeetaTech</authors>
 		<owners>ViewFaceCore</owners>
 		<requireLicenseAcceptance>true</requireLicenseAcceptance>
@@ -13,7 +13,7 @@
 	<files>
 		<file src="fas_second.csta" target="build\viewfacecore\models\fas_second.csta" />
 		<file src="ViewFaceCore.model.fas_second.targets" target="build\ViewFaceCore.model.fas_second.targets" />
-		<file src="..\..\logos\View-Logo.png" target="View-Logo.png" />
-		<file src="..\..\SeetaFace_LICENSE" target="SeetaFace_LICENSE" />
+		<file src="..\..\..\assets\logos\View-Logo.png" target="View-Logo.png" />
+		<file src="..\..\..\SeetaFace_LICENSE" target="SeetaFace_LICENSE" />
 	</files>
 </package>
